tests/More/Bad/26.tig
/*error: functions and variables share same namespace */
let
	function g(x:int) :int = x
	var g := 3
in
	g(4)	/*g now bound to int variable */
end
